--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "YOUR DISCORD API TOKEN HERE",
-	"prefix": "!",
-	"ytApiKey": "YOUR YOUTUBE API TOKEN HERE"
+	"token": "NzgyNDEwMDgwMjUwODg4MjMz.X8LyKw.-QrU9jmGh_RNljIOYCunIfvu6F0",
+	"prefix": "0",
+	"ytApiKey": "AIzaSyB0TLlcTXhVc430SxAu9gXDlRQQqrs43ds"
 }
